ARCH1009-Challenge-Lab-2/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: pmanzano-service
spec:
  selector:
    app: pmanzano-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
