ARCH1009-Challenge-Lab-2/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pmanzano-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pmanzano-service
            port:
              number: 80
