ARCH1009-Challenge-Lab-2/db-netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pmanzano-db-ingress
spec:
  podSelector:
    matchLabels:
      app: pmanzano-mongo
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: pmanzano-nginx
      ports:
        - protocol: TCP
          port: 80
